first commit for jedipunkz.

--- a/status-right.sh.org
+++ b/status-right.sh.org
@@ -20,7 +20,7 @@ pwd+=(["script"]="${segments_path}/pwd.sh")
 pwd+=(["foreground"]="colour211")
 pwd+=(["background"]="colour89")
 pwd+=(["separator"]="${separator_left_bold}")
-register_segment "pwd"
+#register_segment "pwd"
 
 declare -A mail_count
 mail_count+=(["script"]="${segments_path}/maildir_count.sh")
@@ -28,7 +28,7 @@ mail_count+=(["script"]="${segments_path}/maildir_count.sh")
 mail_count+=(["foreground"]="white")
 mail_count+=(["background"]="red")
 mail_count+=(["separator"]="${separator_left_bold}")
-#register_segment "mail_count"
+register_segment "mail_count"
 
 declare -A now_playing
 if [ "$PLATFORM" == "linux" ]; then
@@ -53,7 +53,7 @@ cpu+=(["script"]="${segments_path}/cpu.sh")
 cpu+=(["foreground"]="colour136")
 cpu+=(["background"]="colour240")
 cpu+=(["separator"]="${separator_left_bold}")
-register_segment "cpu"
+#register_segment "cpu"
 
 declare -A load
 load+=(["script"]="${segments_path}/load.sh")
@@ -69,16 +69,16 @@ else
 	battery+=(["script"]="${segments_path}/battery.sh")
 fi
 battery+=(["foreground"]="colour127")
-battery+=(["background"]="colour0")
+battery+=(["background"]="colour137")
 battery+=(["separator"]="${separator_left_bold}")
-register_segment "battery"
+#register_segment "battery"
 
 declare -A weather
 weather+=(["script"]="${segments_path}/weather.sh")
 weather+=(["foreground"]="colour255")
 weather+=(["background"]="colour37")
 weather+=(["separator"]="${separator_left_bold}")
-#register_segment "weather"
+register_segment "weather"
 
 declare -A xkb_layout
 if [ "$PLATFORM" == "linux" ]; then
@@ -91,23 +91,23 @@ fi
 
 declare -A date_day
 date_day+=(["script"]="${segments_path}/date_day.sh")
-date_day+=(["foreground"]="colour36")
-date_day+=(["background"]="colour0")
+date_day+=(["foreground"]="colour136")
+date_day+=(["background"]="colour235")
 date_day+=(["separator"]="${separator_left_bold}")
 register_segment "date_day"
 
 declare -A date_full
 date_full+=(["script"]="${segments_path}/date_full.sh")
-date_full+=(["foreground"]="colour37")
-date_full+=(["background"]="colour0")
+date_full+=(["foreground"]="colour136")
+date_full+=(["background"]="colour235")
 date_full+=(["separator"]="${separator_left_thin}")
 date_full+=(["separator_fg"]="default")
 register_segment "date_full"
 
 declare -A time
 time+=(["script"]="${segments_path}/time.sh")
-time+=(["foreground"]="colour127")
-time+=(["background"]="colour0")
+time+=(["foreground"]="colour136")
+time+=(["background"]="colour235")
 time+=(["separator"]="${separator_left_thin}")
 time+=(["separator_fg"]="default")
 register_segment "time"
