#369: support termux TMPDIR

--- a/AUTHORS
+++ b/AUTHORS
@@ -43,3 +43,4 @@ Danfeng Shan <shandanf@gmail.com>
 Abraham Nuñez <abrahamnm@gmail.com>
 Gavin Kondrath <gavin.kondrath@gmail.com>
 Izzy Gomez <izzygmit@gmail.com>
+Christian Reiniger<creinig@creinig.de>
