--- a/AUTHORS
+++ b/AUTHORS
@@ -43,4 +43,5 @@ Danfeng Shan <shandanf@gmail.com>
 Abraham Nuñez <abrahamnm@gmail.com>
 Gavin Kondrath <gavin.kondrath@gmail.com>
 Izzy Gomez <izzygmit@gmail.com>
-Christian Reiniger<creinig@creinig.de>
+Christian Reiniger <creinig@creinig.de>
+Fabian 'xx4h' Sylvester <xx4h@xx4h.de>
